# ai-script-inventory-

./: .gitignore  .pre-commit-config.yaml  =3.4.0  AI_MODELS_USED.md  AI_MODULES.md  CONTRIBUTING.md  COPILOT_PROMPT_CHEATSHEET.md  DEDUPLICATION_REFACTORING_SUMMARY.md  DEDUPLICATION_SUMMARY.md  DEPENDENCY_AUDIT_SUMMARY.md  LICENSE  ORGANIZATION_CHANGELOG.md  READINESS_REPORT.md  README.md  REPO_AUDIT_PLAN.md  SUPPORT.md  TERMINAL_GUIDE.md  __init__.py  aiterminal.py  balanced_priority.sh  bandit-report.json  chat_gpt_memories.txt  command_log.md  complete-build.sh  complete-implementation.sh  demo_enhanced_terminal.py  enum_mod_custom.py  environment.yml  get_installation_token.py  health_check.py  implement-ai-orchestra.sh  inventory.txt  merge-ai-orchestra.sh  merge-orchestrator.sh  merge-repos.sh  move_top_level_files_by_extension.py  organize_ai_script_inventory.sh  pyproject.toml  requirements-dev.txt  requirements.txt  (+15 more)
.github/: CODEOWNERS  codeql-config.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
ai/: __init__.py  conversation.py  intent.py  memory.py  script_parser.py
ai_orchestra_project/: AUTHORS
ai_tools/: A.py  AAAA.py  AI_TOOL_CATEGORIZATION.md  AMTRELAY.py  APL.py  AvifImagePlugin.py  BdfFontFile.py  BlpImagePlugin.py  BmpImagePlugin.py  BufrStubImagePlugin.py  CAA.py  CERT.py  CFF2ToCFF.py  CFFToCFF2.py  C_F_F_.py  C_F_F__2.py  C_P_A_L_.py  ContainerIO.py  DHCID.py  DdsImagePlugin.py  Duration.py  E_B_L_C_.py  Epoch.py  EpsImagePlugin.py  ExifTags.py  FitsImagePlugin.py  FontFile.py  FtexImagePlugin.py  GPOS.py  GdImageFile.py  GifImagePlugin.py  GimpGradientFile.py  GimpPaletteFile.py  GribStubImagePlugin.py  HIP.py  Hdf5StubImagePlugin.py  IPSECKEY.py  ISDN.py  IcnsImagePlugin.py  IcoImagePlugin.py  (+4054 more)
cfg/: pyvenv.cfg  setup.cfg
config_files/: .gitconfig  .pre-commit-config.yaml  _apply_pyprojecttoml.py  bandit-config-generator  bandit-report.json  bin-aichat.json  codeql.yml  config.json  config_options.py  expand.py  hosts.yml  intel.oneapi.lin.compiler.content,v=2024.2.1+1079.json  intel.oneapi.lin.dev_utilities.content,v=2024.2.1+11.json  intel.oneapi.lin.dpcpp-ct.content,v=2024.2.1+62.json  intel.oneapi.lin.ipp_oneapi.content,v=2021.12.1+14.json  intel.oneapi.lin.ippcp_oneapi.content,v=2021.12.1+12.json  intel.oneapi.lin.mpi_oneapi.content,v=2021.13.1+767.json  intel.oneapi.lin.oneDPL.content,v=2022.6.1+12.json  intel.oneapi.lin.oneapi_advisor.content,v=2024.2.1+41.json  intel.oneapi.lin.oneapi_vtune.content,v=2024.2.1+66.json  intel.oneapi.lin.onedg_oneapi.content,v=2024.2.1+13.json  intel.oneapi.lin.onednn.content,v=2024.2.1+74.json  intel.oneapi.lin.tbb_oneapi.content,v=2021.13.1+12.json  intel.oneapi.lin.toolkit_linking_tool.content,v=2024.2.0+527.json  lib-adler2.json  lib-ahash.json  lib-aho_corasick.json  lib-anstyle.json  lib-anstyle_parse.json  lib-anstyle_query.json  lib-async_recursion.json  lib-atomic_waker.json  lib-autocfg.json  lib-base64_simd.json  lib-bitflags.json  lib-bm25.json  lib-byteorder.json  lib-bytes.json  lib-cached.json  lib-cfg_if.json  (+153 more)
data_files/: .rustc_info.json  96e171a5-46d6-4ae3-b8c0-14553f2912e7.csv  bootstrapper.json  build-script-build-script-build.json  cookies.sqlite  data.sqlite  formhistory.sqlite  intel.oneapi.lin.BaseKit.content,v=2024.2.1+98.json  intel.oneapi.lin.daal_oneapi.content,v=2024.6.0+416.json  intel.oneapi.lin.dpcpp_dbg.content,v=2024.2.1+67.json  intel.oneapi.lin.oneapi-common.content,v=2024.2.1+21.json  intel.oneapi.lin.oneapi_ccl.content,v=2021.13.1+31.json  intel.oneapi.lin.onemkl.content,v=2024.2.1+103.json  intel.oneapi.lin.tcm.content,v=1.1.1+11.json  investigation.db  lib-allocator_api2.json  lib-anndists.json  lib-ansi_colours.json  lib-anstream.json  lib-anyhow.json  lib-arboard.json  lib-async_trait.json  lib-aws_smithy_eventstream.json  lib-aws_smithy_types.json  lib-base64.json  lib-bincode.json  lib-bit_set.json  lib-bit_vec.json  lib-block_buffer.json  lib-bytemuck.json  lib-bytes_utils.json  lib-cached_proc_macro.json  lib-cached_proc_macro_types.json  lib-cc.json  lib-clap.json  lib-cpufeatures.json  lib-crc32fast.json  lib-crossbeam_utils.json  lib-crossterm.json  lib-crypto_common.json  (+149 more)
docs/: BRANCH_PROTECTION.md  CODEQL_SETUP.md  COMMANDS.md  CONTRIBUTING.md  Copilot-CLI-Commands_20250825090428.md  Copilot-CLI-Commands_Version7.md  DEEP_DIVE_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPENAI_INTEGRATION.md  PR_INSTRUCTIONS.md  README.md  README_20250824_192123.md  RELEASE.md  SECURITY.md  SECURITY_20250825_123110.md  SUPER_AI_TERMINAL_REPO_BUILD_GUIDE.md  SUPPORT.md  TERMINAL_GUIDE.md  WORKFLOW.md  inventory_top_level.txt  top_level_filetype_count.txt  validation_doc.md
documentation/: 0_🔍 Detect Repository Languages.txt  10_Post 📥 Checkout repository.txt  11_Complete job.txt  11_🏗️ Autobuild.txt  12_🔍 Perform CodeQL Analysis.txt  1_Set up job.txt  1_🔐 CodeQL Analysis (csharp, ubuntu-latest, autobuild).txt  23_Post 🔍 Perform CodeQL Analysis.txt  24_Post 🔍 Perform CodeQL Analysis.txt  24_Post 🔧 Initialize CodeQL.txt  25_Post ☕ Setup Java (if needed).txt  25_Post 🔧 Initialize CodeQL.txt  26_Post 📥 Checkout repository.txt  27_Complete job.txt  2_📥 Checkout repository.txt  2_🔐 CodeQL Analysis (go, ubuntu-latest, autobuild).txt  3_🐍 Setup Python (if needed).txt  3_📊 Generate Comprehensive Security Report.txt  3_🔍 Detect languages in repository.txt  3_🔐 CodeQL Analysis (javascript, ubuntu-latest, none).txt  4_📤 Upload Security Report.txt  4_📦 Install Python dependencies (if needed).txt  4_🔐 CodeQL Analysis (java, ubuntu-latest, autobuild).txt  5_☕ Setup Java (if needed).txt  5_📊 Final Summary.txt  5_🔐 CodeQL Analysis (ruby, ubuntu-latest, none).txt  6_Post 📥 Checkout repository.txt  6_🔐 CodeQL Analysis (python, ubuntu-latest).txt  6_🚀 Setup Node.js (if needed).txt  7_Complete job.txt  7_🏗️ Setup Go (if needed).txt  7_📋 Security Analysis Report.txt  8_💎 Setup Ruby (if needed).txt  9_🔧 Initialize CodeQL.txt  CODEQL_SETUP.md  CONTRIBUTING.md  DEDUPLICATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  README_20250826_195110.md  (+21 more)
(+297 files in other folders)
